# gnc-dashboard

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  data_utils.py  definitions.py  main.py  plot_utils.py  pre-commit-hooks.yaml  pyproject.toml  scratch.py  serial_utils.py
data/: gps-data.txt
data/flight-logs/: 20240808-214204.txt  20240808-214259.txt
gnc_dashboard/: data_utils.py  definitions.py  main.py  plot_utils.py
src/: definitions.py  misc_utils.py  serial_emulator.py  serial_utils.py
tests/: test_serial_utils.py
